--- a/seminario.tex
+++ b/seminario.tex
@@ -184,6 +184,14 @@ im\'agenes de b\'usqueda en una larga base de datos puede obtener resultados inc
 puede que no identifique todas las palabras clave(keywords) que especifican la imagen y, por tanto, es ineficiente. Al 
 proporcionar una buena técnica de indexación basada en el contenido real de las imágenes, se puede recuperar y producir
 resultados precisos.
+\\
+\begin{SCfigure}[0.5]
+    \caption{Arquitectura general de un CBIR}
+    \includegraphics[scale = .3]{./images/cbir arquitecture.png}
+\end{SCfigure}
+
+
+
 
 \subsection{Low-Level Image Feature:}
 
