:.un poco m\'as organizado

--- a/seminario.tex
+++ b/seminario.tex
@@ -22,6 +22,14 @@
 
          % for the preliminaries
 %
+\title{Recuperación de Información basada en Imágenes (Image Information Retrieval)}
+\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
+\institute{MATCOM, Universidad de La Habana,\\
+\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
+\texttt{}
+}
+\maketitle
+
 \begin{abstract}
     \dots
     En este paper se aborda sobre la recuperaci\'on de im\'agenes, una de las ramas de la
@@ -39,31 +47,10 @@
   
           % start of the contributions
 
-%
-\title{Caracter\'isticas del problema}
-%
-\titlerunning{}  % abbreviated title (for running head)
-%                                     also used for the TOC unless
-%                                     \toctitle is used
-%
 
 
-
-%
-\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
-%
-\authorrunning{Ivar Ekeland et al.} % abbreviated author list (for running head)
-%
-%%%% list of authors for the TOC (use if author list has to be modified)
-
-%
-\institute{MATCOM, Universidad de La Habana,\\
-\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
-\texttt{}
-}
-
-\maketitle
-
+\chapter*{Caracter\'isticas del problema}
+\addcontentsline{toc}{chapter}{Caracter\'isticas del problema}
 La Recuperación de im\'agenes es el campo que se encarga de buscar y obtener imágenes 
 digitales de una base  de datos. Debido a la cantidad creciente de imágenes digitales 
 alrededor del mundo, desde 1970 este campo ha estado bien activo. Un sistema de 
@@ -85,14 +72,9 @@ búsqueda, como desea el usuario que le sean presentados los resultados de su co
 buscar el usuario y cual es la naturaleza de la consulta del usuario.
 
 
-\newpage
-\title{Diferencias entre Image Retrieval y Content-based image retrieval}
-\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
-\institute{MATCOM, Universidad de La Habana,\\
-\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
-\texttt{}
-}
-\maketitle
+\chapter*{Diferencias entre Image Retrieval y Content-based image retrieval}
+\addcontentsline{toc}{chapter}{Diferencias entre Image Retrieval y Content-based image retrieval}
+
 
 
 La recuperación de imágenes (Image Retrieval) se refiere a la rama de la recuperación de información que se encarga 
@@ -102,14 +84,9 @@ imágenes basada en contenido(Content-based image retrieval) se refiere a un tip
 imágenes que se  caracteriza por usar el contenido de las imágenes (color, forma, textura, etc) para realizar el proceso 
 de consulta.
 
-\newpage
-\title{Principales m\'etodos para la recuperaci\'on de im\'agenes}
-\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
-\institute{MATCOM, Universidad de La Habana,\\
-\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
-\texttt{}
-}
-\maketitle
+% \newpage
+\chapter*{Principales m\'etodos para la recuperaci\'on de im\'agenes}
+\addcontentsline{toc}{chapter}{Principales m\'etodos para la recuperaci\'on de im\'agenes}
 
 \section{Keyword Based Image retrieval:}
 
@@ -172,6 +149,7 @@ utiliza una estructura de parers de valores atributo. Este m\'etodo permite desc
 una definici\'on de una parte de un auto puede incluir especificaciones de esos componentes. Cada elemento del objeto se puede especificar 
 de nuevo usando varios atributos como la forma, el tama\~{n}o y el material. Los elementos pueden incluso tener elementos ellos mismos, por 
 ejemplo, una mesa tiene patas, y sus subelementos pueden moverse hasta el nivel donde un elemento no puede obtener un subelemento m\'as particular.
+
 
 \section{Content Based Image Retrieval(CBIR):}
 
@@ -349,15 +327,11 @@ sem\'antica entre el hombre y la m\'aquina.
 
 
 
-\newpage
 
-\title{Evaluación del sistema}
-\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
-\institute{MATCOM, Universidad de La Habana,\\
-\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
-\texttt{}
-}
-\maketitle
+
+\chapter*{Evaluación del sistema}
+\addcontentsline{toc}{chapter}{Evaluación del sistema}
+
 
 La recuperación de imágenes es esencialmente un problema de recuperación de información. Por tanto, 
 las métricas de evaluación han sido adoptados de forma bastante natural a partir de la investigación de 
@@ -377,15 +351,11 @@ de entidades recuperadas con respecto a una consulta, si la precisión se calcul
 obtenida, la precisión promedio se da como la media de toda la precisión individual. Como es obvio, esta métrica está muy 
 influenciada por elementos relevantes de alto rango y no tanto por los que se encuentran al final de la lista recuperada.
 
-\newpage
+% \newpage
 
-\title{Aplicaciones}
-\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
-\institute{MATCOM, Universidad de La Habana,\\
-\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
-\texttt{}
-}
-\maketitle
+\chapter*{Aplicaciones}
+\addcontentsline{toc}{chapter}{Aplicaciones}
+
 
 
 
@@ -424,15 +394,10 @@ que influyan en los resultados de votaciones. En este caso los HIPs también con
 están diseñadas para diferenciar entre humanos o programas, basados en la respuesta a algunas preguntas.
 
 
-\newpage
+% \newpage
 
-\title{Ventajas y desventajas}
-\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
-\institute{MATCOM, Universidad de La Habana,\\
-\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
-\texttt{}
-}
-\maketitle
+\chapter*{Ventajas y desventajas}
+\addcontentsline{toc}{chapter}{Ventajas y desventajas}
 
 \underline {\bf Keyword Based Image Retrieval}\\
 
@@ -463,5 +428,40 @@ Ventajas:\\
 
 Desventajas:\\
 $\bullet$ A pesar de que estos sistemas son mucho mejores que los existentes tiempo atr\'as, a\'un no existen mecanismos lo suficientemente potentes.
+
+\newpage
+\addcontentsline{toc}{chapter}{References}
+\begin{thebibliography}{}
+    %
+    \bibitem[2012]{2clar:eke}
+    Ritika Hirwane:
+    Fundamental of Content Based Image
+    Retrieval
+    
+    \bibitem[1981]{2clar:eke:2}
+    Clarke, F., Ekeland, I.:
+    Solutions p\'{e}riodiques, du
+    p\'{e}riode donn\'{e}e, des \'{e}quations hamiltoniennes.
+    Note CRAS Paris 287, 1013--1015 (1978)
+    
+    \bibitem[1982]{2mich:tar}
+    Michalek, R., Tarantello, G.:
+    Subharmonic solutions with prescribed minimal
+    period for nonautonomous Hamiltonian systems.
+    J. Diff. Eq. 72, 28--55 (1988)
+    
+    \bibitem[1983]{2tar}
+    Tarantello, G.:
+    Subharmonic solutions for Hamiltonian
+    systems via a $\bbbz_{p}$ pseudoindex theory.
+    Annali di Matematica Pura (to appear)
+    
+    \bibitem[1985]{2rab}
+    Rabinowitz, P.:
+    On subharmonic solutions of a Hamiltonian system.
+    Comm. Pure Appl. Math. 33, 609--633 (1980)
+    
+\end{thebibliography}
+
 
 \end{document}
