add cual es mejor metodo?

--- a/seminario.tex
+++ b/seminario.tex
@@ -31,7 +31,7 @@
 \maketitle
 
 \begin{abstract}
-    \dots
+    
     Este paper aborda sobre la recuperaci\'on de im\'agenes, una de las ramas de la
     recuperaci\'on de informaci\'on, sus principales m\'etodos como el basado en keywords
     (keyword based image retrieval) o el basado en contenido (content based image retrieval),
@@ -319,8 +319,12 @@ sem\'antica entre el hombre y la m\'aquina.
 
 \noindent
 
-
-
+\section*{?`Cual ser\'ia el mejor m\'etodo?:}
+En un proceso inteligente de recuperaci\'on de im\'agenes, diferentes esquemas de indexaci\'on 
+son aplicados comenzando por el text based, anotaciones de keyword, basda en comapos(field based), 
+basado en estrucutras, basado en contenido(CBIR), basado en sem\'antica hasta el basado en ontolog\'ia.
+Por tanto la combinaci\'on de varios m\'etodos ser\'ia lo m\'as efectivo si se quiere obtener una respuesta 
+bastante cercana a la query del usuario.
 
 
 
