--- a/seminario.tex
+++ b/seminario.tex
@@ -321,8 +321,8 @@ sem\'antica entre el hombre y la m\'aquina.
 
 \section*{?`Cual ser\'ia el mejor m\'etodo?:}
 En un proceso inteligente de recuperaci\'on de im\'agenes, diferentes esquemas de indexaci\'on 
-son aplicados comenzando por el text based, anotaciones de keyword, basda en comapos(field based), 
-basado en estrucutras, basado en contenido(CBIR), basado en sem\'antica hasta el basado en ontolog\'ia.
+son aplicados comenzando por el text based, anotaciones de keyword, basda en compos(field based), 
+basado en estructuras, basado en contenido(CBIR), basado en sem\'antica hasta el basado en ontolog\'ia.
 Por tanto la combinaci\'on de varios m\'etodos ser\'ia lo m\'as efectivo si se quiere obtener una respuesta 
 bastante cercana a la query del usuario.
 
@@ -432,6 +432,18 @@ Ventajas:\\
 
 Desventajas:\\
 $\bullet$ A pesar de que estos sistemas son mucho mejores que los existentes tiempo atr\'as, a\'un no existen mecanismos lo suficientemente potentes.
+
+\underline {\bf Ontology Based Image Retrieval}\\\\
+
+Ventajas:\\
+\noindent$\bullet$ Usando la representaci\'on ontol\'ogica  de im\'agenes se puede interpretar las ideas de alto nivel en la mente del usuario.
+
+
+
+Desventajas:\\
+$\bullet$
+Si se define una ontolog\'ia compleja el proceso de anotaci\'on tambi\'en ser\'a complejo. El modelo de dominio ontol\'ogico es tan bueno 
+como la mano experta que decide la ontolog\'ia.
 
 \newpage
 \addcontentsline{toc}{chapter}{References}
