added ventajas desventajas ontology bir

--- a/seminario.tex
+++ b/seminario.tex
@@ -431,12 +431,12 @@ Ventajas:\\
 \noindent$\bullet$ Es capaz de utilizando herramientas de machine learning lograr una mayor precisi\'on a la hora de representar conceptos sem\'anticos.\\
 
 Desventajas:\\
-$\bullet$ A pesar de que estos sistemas son mucho mejores que los existentes tiempo atr\'as, a\'un no existen mecanismos lo suficientemente potentes.
+$\bullet$ A pesar de que estos sistemas son mucho mejores que los existentes tiempo atr\'as, a\'un no existen mecanismos lo suficientemente potentes.\\
 
 \underline {\bf Ontology Based Image Retrieval}\\\\
 
 Ventajas:\\
-\noindent$\bullet$ Usando la representaci\'on ontol\'ogica  de im\'agenes se puede interpretar las ideas de alto nivel en la mente del usuario.
+\noindent$\bullet$ Usando la representaci\'on ontol\'ogica  de im\'agenes se puede interpretar las ideas de alto nivel de la mente del usuario.
 
 
 
