--- a/seminario.tex
+++ b/seminario.tex
@@ -398,6 +398,18 @@ maliciosos que solicitan servicios a escalas masivas. Pueden ser escritos progra
 que influyan en los resultados de votaciones. En este caso los HIPs también conocidos como CAPTCHAs, son la solución. Estas interfaces 
 están diseñadas para diferenciar entre humanos o programas, basados en la respuesta a algunas preguntas.
 
+\noindent $\blacksquare$ \textbf{Aplicaciones en la medicina} :
+Una apliaci\'on que recupera cortes de 2D MRI(im\'agenes de resonancia magn\'etica)
+de vol\'umenes cerebrales en 3D. La aplicaci\'on aceptar\'ia query de im\'agenens 2D MRI del usuario e identificar\'ia el volume 3D que coincide
+de acuerdo con la  regi\'on del cerebro relacionada con la query. Los cortes coincidentes se recuperadan mediante una b\'usqueda adicional en los vol\'umenes
+3D coincidentes.
+
+\noindent $\blacksquare$ \textbf{Aplicaciones en el comercio electr\'onico} :
+La compra electr\'onica es la tendencia actual en el mundo m\'as que compras tradicionales debido a la conveniencia de internet. Cuando llega 
+el tiempo de la compra, los usuarios se encuentran con un problema en seleccionar los items que necesitan comprar. Un sistema de recuperaci\'on
+de im\'agenes puede asistir a la decisiones del usuario en ropa y ayudarlo a tener una mejor selecci\'on de ropa durante la compra electr\'onica.
+El m\'etodo usado enriquece la b\'usqueda y recuperaci\'on de productos de informaci\'on usando CBIR con caracter\'isticas como el color o la textura 
+en la aplicaci\'on de la venta minorista de ropa electr\'onica.  
 
 % \newpage
 
@@ -447,49 +459,52 @@ Si se define una ontolog\'ia compleja el proceso de anotaci\'on tambi\'en ser\'a
 como la mano experta que decide la ontolog\'ia.
 
 \newpage
-\addcontentsline{toc}{chapter}{References}
+\addcontentsline{toc}{}{Bibliograf\'ia}
 \begin{thebibliography}{}
     %
-    \bibitem[2012]{2clar:eke}
-    Ritika Hirwane:
-    Fundamental of Content Based Image
-    Retrieval
+    \bibitem[1]{2clar:eke}
+    Ritika Hirwane(2012).
+    Fundamental of Content Based ImageRetrieval.
+    (IJCSIT) International Journal of Computer Science and Information Technologies, Vol. 3 (1)
     
-    \bibitem[2010]{2clar:eke:2}
-    Hui Hui Wang, Dzulkifli Mohamad, N.A. Ismail:
+    \bibitem[2]{2clar:eke:2}
+    Hui Hui Wang, Dzulkifli Mohamad, N.A. Ismail(2010).
     Approaches, Challenges and Future Direction
-    of Image Retrieval
-    JOURNAL OF COMPUTING, VOLUME 2, ISSUE 6, JUNE 2010
+    of Image Retrieval.
+    Journal of Computing, Volume 2, Issue 6
     
-    \bibitem[2012]{2mich:tar}
+    \bibitem[3]{2mich:tar}
     Chandra Mouli P.V.S.S.R.,Mohd Khalid
-    Vijayan Vijayarajan:
+    Vijayan Vijayarajan(2012).
     A review: from keyword based image retrieval to ontology 
-    based image retrieval.
-    Article. (January 2012)    
+    based image retrieval.International Journal of Reviews in Computing  
     
-    \bibitem[1999]{2tar}
-    John Eakins,Margaret Graham:
+    \bibitem[4]{2tar}
+    John Eakins,Margaret Graham(1999).
     Content-based Image Retrieval.
     JISC Technology Applications Programme (October 1999)
 
     
-    \bibitem[2008]{2rab}
-    Yu Xiaohong, Xu Jinhua
+    \bibitem[5]{2rab}
+    Yu Xiaohong, Xu Jinhua(2008)
     The Related Techniques of Content-based Image Retrieval.
     2008 International Symposium on Computer Science and Computational Technology
     
-    \bibitem[2017]{2rab}
-    Elsaeed E. AbdElrazek:
+    \bibitem[6]{2rab}
+    Elsaeed E. AbdElrazek(2017).
     A Comparative Study of Image Retrieval Algorithms for
     Enhancing a Content-based Image Retrieval System.
-    Global Journals  of Computer Science and Technology:Inc Volume 17 Issue 3 Version 1.0 Year 2017
+    Global Journals  of Computer Science and Technology:Inc Volume 17 Issue 3 Version 1.0
 
-    \bibitem[2000]{2rab}
-    Abby A. Goodrum:
+    \bibitem[7]{2rab}
+    Abby A. Goodrum(2000).
     Image Information Retrieval: An Overview of Current Research.
-    College of Information Science and Technology Drexel University ,Volume 3 No 2, 2000
+    College of Information Science and Technology Drexel University.
 
+    \bibitem[8]{2rab}
+    Unknown Author(2021,November 26).
+    Image retrieval.Wikipedia.\url{https://en.wikipedia.org/wiki/Image_retrieval}.
+    
 \end{thebibliography}
 
 
